--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1346,7 +1346,7 @@
   "pli-tv-kd2:34.9.6": "If they investigate, and they see someone, and then do the observance-day procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.9.7": "If they investigate, and they see someone, but think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and then do the observance-day procedure aiming at schism, there’s a serious offense. ",
   "pli-tv-kd2:34.10.0": "35. The doing of the observance-day procedure with those belonging to a different Buddhist sect, etc. ",
-  "pli-tv-kd2:34.10.1": "“It may happen that newly arrived monks see resident monks who belong to a different Buddhist sect. ",
+  "pli-tv-kd2:34.10.1": "“It may happen that newly arrived monks see resident monks who belong to a different Buddhist sect, ",
   "pli-tv-kd2:34.10.2": "But they have the view that they belong to the same Buddhist sect. Then—",
   "pli-tv-kd2:34.10.3": "If they don’t ask the resident monks about it, and then do the observance-day procedure together, there’s no offense. ",
   "pli-tv-kd2:34.10.4": "If they do ask the resident monks about it, but remain unsure, and then do the observance-day procedure together, there’s an offense of wrong conduct. ",
