--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1361,7 +1361,7 @@
   "pli-tv-kd2:34.12.3": "If they don’t ask the newly arrived monks about it, and then do the observance-day procedure together, there’s no offense. ",
   "pli-tv-kd2:34.12.4": "If they do ask the newly arrived monks about it, but remain unsure, and then do the observance-day procedure together, there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.12.5": "If they do ask the newly arrived monks about it, but remain unsure, and then do the observance-day procedure separately, there’s no offense. ",
-  "pli-tv-kd2:34.13.1": "“It may happen that resident monks see newly arrived monks who belong to the same Buddhist sect. ",
+  "pli-tv-kd2:34.13.1": "“It may happen that resident monks see newly arrived monks who belong to the same Buddhist sect, ",
   "pli-tv-kd2:34.13.2": "But they have the view that they belong to a different Buddhist sect. Then—",
   "pli-tv-kd2:34.13.3": "If they don’t ask the newly arrived monks about it, and then do the observance-day procedure together, there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.13.4": "If they do ask the newly arrived monks about it, and they change their view, but then do the observance-day procedure separately, there’s an offense of wrong conduct. ",
