--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -33,7 +33,7 @@
   "mn10:6.0": "1.2  Pozų skyrius",
   "mn10:6.1": "Toliau, vienuoliai, vienuolis eidamas supranta: „Aš einu”, – stovėdamas supranta: „Aš stoviu”, – sėdėdamas supranta: „Aš sėdžiu”, – o gulėdamas supranta: „Aš guliu”.",
   "mn10:6.2": "Ir kad ir kokioje pozoje jo kūnas būtų, jis tai žino.",
-  "mn10:7.1": "Taip, jis gyvena, kontempliuodamas kūną kūne viduje, arba gyvena, kontempliuodamas kūną kūne išorėje, arba gyvena, kontempliuodamas kūną kūne ir viduje, ir išorėje.",
+  "mn10:7.1": "Taip, jis gyvena, kontempliuodamas kūną kūne viduje, arba gyvena, kontempliuodamas kūną kaip kūną išorėje, arba gyvena, kontempliuodamas kūną kūne ir viduje, ir išorėje.",
   "mn10:7.2": "Jis stebi kūne kilimo prigimtį, arba stebi kūne nykimo prigimtį, arba stebi kūne ir kilimo, ir nykimo prigimtį.",
   "mn10:7.3": "Arba jame yra įtvirtinta atida: „Yra kūnas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:7.4": "Taip irgi, vienuoliai, vienuolis gyvena kūne, kontempliuodamas kūną.",
