--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -9,7 +9,7 @@
   "mn10:1.6": "Palaimintasis štai ką pasakė:",
   "mn10:2.1": "„Vienuoliai, yra šis tiesioginis kelias į būtybių apsivalymą, liūdesio ir raudojimo įveikimą, skausmo ir nepasitenkinimo baigtį, žinojimo pasiekimą, Nibbanos patyrimą – tai keturios atidos sritys.",
   "mn10:3.1": "Kokios keturios?",
-  "mn10:3.2": "Štai, vienuoliai, vienuolis gyvena, kontempliuodamas kūną kūne, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu; ",
+  "mn10:3.2": "Štai, vienuoliai, vienuolis gyvena, kontempliuodamas kūną kaip kūną, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu; ",
   "mn10:3.3": "gyvena kontempliuodamas jausmo tonus jausmo tonuose, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu;",
   "mn10:3.4": "gyvena kontempliuodamas protą prote, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu;",
   "mn10:3.5": "gyvena kontempliuodamas reiškinius reiškiniuose, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu.",
