--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -808,7 +808,7 @@
   "pli-tv-kd4:13.1.50": "If they don’t ask the resident monks about it, and they do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.51": "If they do ask the resident monks about it, but they don’t reach a clear conclusion, and they then do the invitation procedure together, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.52": "If they do ask the resident monks about it, but they don’t reach a clear conclusion, and they then do the invitation procedure separately, there’s no offense. ",
-  "pli-tv-kd4:13.1.53": "“It may happen that newly arrived monks see resident monks who belong to the same Buddhist sect. But they have the view that they belong to a different Buddhist sect. In that case: ",
+  "pli-tv-kd4:13.1.53": "“It may happen that newly arrived monks see resident monks who belong to the same Buddhist sect, but they have the view that they belong to a different one. In that case: ",
   "pli-tv-kd4:13.1.54": "If they don’t ask the resident monks about it, and they do the invitation procedure together, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.55": "If they do ask the resident monks about it, and they change their view, but they then do the invitation procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.56": "If they do ask the resident monks about it, and they change their view, and they then do the invitation procedure together, there’s no offense. ",
