--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -61,7 +61,7 @@
   "mn10:14.1": "Toliau, vienuoliai, vienuolis panašiai kaip kad matydamas vienos dienos senumo, dviejų dienų senumo ar trijų dienų senumo išmestą kapinėse kūną, ištinusį, pamėlynavusi, pūvantį,",
   "mn10:14.2": "sutelkia dėmesį į šitą patį kūną:",
   "mn10:14.3": "„Šitas gi kūnas yra tokios pat prigimties, tokia (jo) ateitis, (jis) to neišvengs.”",
-  "mn10:15.1": "Taip, jis gyvena, kontempliuodamas kūną kūne …",
+  "mn10:15.1": "Taip, jis gyvena, kontempliuodamas kūną kaip kūną …",
   "mn10:15.2": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas kūne kūną.",
   "mn10:16.1": "Toliau, vienuoliai, vienuolis panašiai kaip kad  matydamas ėdamą varnų ar ėdamą vanagų, ėdamą maitvanagių ar ėdamą garnių, ėdamą šunų ar ėdamą tigrų, ėdamą laukinių žvėrių ar ėdamą šakalų ar ėdamą daugybės vabzdžių išmestą kapinėse kūną,",
   "mn10:16.2": "sutelkia dėmesį į šitą patį kūną:",
