--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -74,7 +74,7 @@
   "mn10:24.1": "griaučius, be jungiančių sausgyslių, išmėtytus į visas puses: vienur rankų kaulą, kitur padikaulį, vienur kulkšnies kaulą, kitur blauzdikaulį, vienur šlaunikaulį, kitur dubenkaulį, vienur šonkaulį, kitur stuburkaulį, vienur raktikaulį, kitur kaklo kaulą, vienur žandikaulį, kitur dantį, dar kitur kaukolę,",
   "mn10:24.2": "sutelkia dėmesį į šitą patį kūną:",
   "mn10:24.3": "„Šitas gi kūnas yra tokios pat prigimties, tokia (jo) ateitis, (jis) to neišvengs.”",
-  "mn10:25.1": "Taip, jis gyvena, kontempliuodamas kūną kūne …",
+  "mn10:25.1": "Taip, jis gyvena, kontempliuodamas kūną kaip kūną …",
   "mn10:25.2": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas kūne kūną.",
   "mn10:26-28.1": "Toliau, vienuoliai, vienuolis panašiai kaip kad matydamas išmesto kapinėse kūno baltus kaulus, įgavusius kriauklės spalvą …",
   "mn10:29.1": "pasenusių kaulų krūvą …",
