--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -804,7 +804,7 @@
   "pli-tv-kd4:13.1.47": "If they investigate, and they see someone, but think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and then do the invitation procedure aiming at schism, there’s a serious offense. ",
   "pli-tv-kd4:13.1.48.0": "17. The doing of the invitation procedure with those belonging to a different Buddhist sect, etc. ",
   "pli-tv-kd4:13.1.48.1": "“It may happen that newly arrived monks see resident monks who belong to a different Buddhist sect, ",
-  "pli-tv-kd4:13.1.49": "but they have the view that they belong to the same Buddhist sect. In such a case: ",
+  "pli-tv-kd4:13.1.49": "but they have the view that they belong to the same one. In such a case: ",
   "pli-tv-kd4:13.1.50": "If they don’t ask the resident monks about it, and they do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.51": "If they do ask the resident monks about it, but they don’t reach a clear conclusion, and they then do the invitation procedure together, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.52": "If they do ask the resident monks about it, but they don’t reach a clear conclusion, and they then do the invitation procedure separately, there’s no offense. ",
