--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1352,7 +1352,7 @@
   "pli-tv-kd2:34.10.4": "If they do ask the resident monks about it, but remain unsure, and then do the observance-day procedure together, there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.10.5": "If they do ask the resident monks about it, but remain unsure, and then do the observance-day procedure separately, there’s no offense. ",
   "pli-tv-kd2:34.11.1": "“It may happen that newly arrived monks see resident monks who belong to the same Buddhist sect, ",
-  "pli-tv-kd2:34.11.2": "but they have the view that they belong to a different Buddhist sect. In such a case: ",
+  "pli-tv-kd2:34.11.2": "but they have the view that they belong to a different one. In that case: ",
   "pli-tv-kd2:34.11.3": "If they don’t ask the resident monks about it, and then do the observance-day procedure together, there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.11.4": "If they do ask the resident monks about it, and they change their view, but then do the observance-day procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.11.5": "If they do ask the resident monks about it, and they change their view, and then do the observance-day procedure together, there’s no offense. ",
