--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -101,7 +101,7 @@
   "mn10:33.3": "Arba jame yra įtvirtinta atida: „Yra jausmo tonas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:33.4": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas jausmo tonus kaip jausmo tonus.",
   "mn10:34.0": "3. Proto kontempliacija",
-  "mn10:34.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas prota prote?",
+  "mn10:34.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas protą kaip protą?",
   "mn10:34.2": "Štai, vienuoliai, vienuolis supranta protą su geiduliu kaip protą su geiduliu;",
   "mn10:34.3": "supranta protą be geidulio kaip protą be geidulio;",
   "mn10:34.4": "supranta protą su neapykanta kaip protą su neapykanta;",
