--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -40,7 +40,7 @@
   "mn10:8.0": "1.3 Aiškaus supratimo skyrius",
   "mn10:8.1": "Toliau, vienuoliai, vienuolis eidamas į priekį ir eidamas atgal, daro tai aiškiai suprasdamas; žiūrėdamas į priekį ir žiūrėdamas į šalis, daro tai aiškiai suprasdamas; sulenkdamas ir ištiesdamas (galūnes), daro tai aiškiai suprasdamas; dėvėdamas viršutinius apdarus ir nešdamas dubenį aukoms, daro tai aiškiai suprasdamas; valgydamas, gerdamas, kramtydamas ir  ragaudamas, daro tai aiškiai suprasdamas; tuštindamasis ir šlapindamasis, daro tai aiškiai suprasdamas; eindamas, stovėdamas, sėdėdamas, gulėdamas, nubusdamas, kalbėdamas ir tylėdamas, daro tai aiškiai suprasdamas.",
   "mn10:9.1": "Taip, jis gyvena, kontempliuodamas kūną kaip kūną …",
-  "mn10:9.2": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas kūne kūną.",
+  "mn10:9.2": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas kūną kaip kūną.",
   "mn10:10.0": "1.4  Atgrasumo skyrius",
   "mn10:10.1": "Toliau, vienuoliai, vienuolis šitą patį, padengtą oda kūną, pilną visokiausių nešvarumų, mintyse apžiūri nuo kojų padų į viršų ir žemyn nuo galvos plaukų (taip): ",
   "mn10:10.2": " „Šiame kūne yra galvos plaukai, kūno plaukai, nagai, dantys, oda, raumenys, sausgyslės, kaulai, čiulpai, inkstai, širdis, kepenys, diafragma, blužnis, plaučiai, žarnos, žarnaplėvė, skrandžio turinys, išmatos, tulžis, gleivės, pūliai, kraujas, prakaitas, lašiniai, ašaros, riebalai, seilės, snargliai, sąnarinis tepalas, šlapimas.”",
