--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -48,7 +48,7 @@
   "mn10:10.4": "Lygiai gi, vienuoliai, taip vienuolis šitą patį, padengtą oda kūną, pilną visokiausių nešvarumų, mintyse apžiūri nuo kojų padų į viršų ir žemyn nuo galvos plaukų (taip):",
   "mn10:10.5": " „Šiame kūne yra galvos plaukai … šlapimas.”",
   "mn10:11.1": "Taip, jis gyvena, kontempliuodamas kūną kaip kūną …",
-  "mn10:11.2": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas kūne kūną.",
+  "mn10:11.2": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas kūną kaip kūną.",
   "mn10:12.0": "1.5 Dėmesio nukreipto į elementus skyrius",
   "mn10:12.1": "Toliau, vienuoliai, vienuolis į šitą patį kūną, kad ir kaip šis būtų išsidėstęs, kad ir kokioje pozoje būtų, žiūri kaip į elementus:",
   "mn10:12.2": "„Šiame kūne yra žemės elementas, vandens elementas, ugnies elementas, vėjo elementas.”",
