--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -56,7 +56,7 @@
   "mn10:12.4": "lygiai gi, vienuoliai, taip ir vienuolis į šitą patį kūną, kad ir kaip šis būtų išsidėstęs, kad ir kokioje pozoje būtų, žiūri kaip į elementus:",
   "mn10:12.5": "„Šiame kūne yra žemės elementas, vandens elementas, ugnies elementas, vėjo elementas.”",
   "mn10:13.1": "Taip, jis gyvena, kontempliuodamas kūną kaip kūną …",
-  "mn10:13.2": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas kūne kūną.",
+  "mn10:13.2": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas kūną kaip kūną.",
   "mn10:14.0": "1.6 Devynios kapinės kontempliacijos",
   "mn10:14.1": "Toliau, vienuoliai, vienuolis panašiai kaip kad matydamas vienos dienos senumo, dviejų dienų senumo ar trijų dienų senumo išmestą kapinėse kūną, ištinusį, pamėlynavusi, pūvantį,",
   "mn10:14.2": "sutelkia dėmesį į šitą patį kūną:",
