--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -96,7 +96,7 @@
   "mn10:32.8": "jausdamas dvasinį nemalonų jausmo toną, supranta: „Jaučiu dvasinį nemalonų jausmo toną“.",
   "mn10:32.9": "Jausdamas žemišką nei nemalonų, nei malonų jausmo toną, jis supranta: „Jaučiu žemišką nei nemalonų, nei malonų jausmo toną“, –",
   "mn10:32.10": "jausdamas dvasinį nei nemalonų, nei malonų jausmo toną, supranta: „Jaučiu dvasinį nei nemalonų, nei malonų jausmo toną.“",
-  "mn10:33.1": "Taip, jis gyvena, kontempliuodamas jausmo tonus jausmo tonuose viduje, arba gyvena, kontempliuodamas jausmo tonus jausmo tonuose išorėje, arba gyvena, kontempliuodamas jausmo tonus jausmo tonuose ir viduje, ir išorėje.",
+  "mn10:33.1": "Taip, jis gyvena, kontempliuodamas jausmo tonus kaip jausmo tonus viduje, arba gyvena, kontempliuodamas jausmo tonus kaip jausmo tonus išorėje, arba gyvena, kontempliuodamas jausmo tonus kaip jausmo tonus ir viduje, ir išorėje.",
   "mn10:33.2": "Jis stebi jausmo tonuose kilimo prigimtį, arba stebi jausmo tonuose nykimo prigimtį, arba stebi jausmo tonuose ir kilimo, ir nykimo prigimtį.",
   "mn10:33.3": "Arba jame yra įtvirtinta atida: „Yra jausmo tonas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:33.4": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas jausmo tonus kaip jausmo tonus.",
