--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -133,5 +133,6 @@
   "mn10:36.7": "Viduje esant nerimui ir graužačiai, jis supranta: „Manyje yra nerimas ir graužatis”, – arba viduje nesant nerimo ir graužaties, supranta: „Mano viduje nėra nerimo ir graužaties“. Jis taip pat supranta kaip kyla dar nekilę nerimas ir graužatis, supranta kaip pašalinami kilę nerimas ir graužatis, ir kaip nebekyla pašalinti nerimas ir graužatis, jis taip pat supranta.",
   "mn10:36.8": "Viduje esant abejonei, jis supranta: „Manyje yra abejonė”, – arba viduje nesant abejones, supranta: „Mano viduje nėra abejones“. Jis taip pat supranta kaip kyla dar nekilusi abejonė, supranta kaip pašalinama kilusi abejonė, ir kaip nebekyla pašalinta abejonė, jis taip pat supranta.",
   "mn10:37.1": "Taip, jis gyvena, kontempliuodamas principus kaip principus viduje, arba gyvena, kontempliuodamas principus kaip principus išorėje, arba gyvena, kontempliuodamas principus kaip principus ir viduje, ir išorėje.",
-  "mn10:37.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį."
+  "mn10:37.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
+  "mn10:37.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša."
 }
