--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -138,5 +138,6 @@
   "mn10:37.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas penkias kliūtis kaip principus.",
   "mn10:38.0": "4.2 Sandų skyrius",
   "mn10:38.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas penkis savinamus sandus kaip principus.",
-  "mn10:38.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas penkis savinamus sandus kaip principus?"
+  "mn10:38.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas penkis savinamus sandus kaip principus?",
+  "mn10:38.3": "Štai, vienuoliai, vienuolis (supranta):"
 }
