--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn56.39:1.3": "‚Sicher weiß und sieht dieser werte Herr.‘ ",
   "sn56.39:2.1": "Wie eine leichte Baumwoll- oder Kapokflocke, die vom Wind hochgehoben würde und auf ebener Erde aufkäme: ",
   "sn56.39:2.2": "Der Ostwind würde sie nach Westen treiben, der Westwind würde sie nach Osten treiben, der Nordwind würde sie nach Süden treiben und der Südwind würde sie nach Norden treiben. ",
-  "sn56.39:2.3": "Und warum? "
+  "sn56.39:2.3": "Und warum? ",
+  "sn56.39:2.4": "Weil diese Baumwollflocke so leicht ist. "
 }
