--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -138,5 +138,6 @@
   "mn1:50.1": "પરંતુ નિર્વાણને નિર્વાણ સમજ઼ી એમણે પોતાને નિર્વાણ ના માનવું જોઇએ, પોતાને નિર્વાણમાં ના માનવું જોઈએ, પોતાને નિર્વાણથી ના માનવું જોઇએ, નિર્વાણ મારું છે એવું ના માનવું જોઇએ, નિર્વાણમાં આનંદ ના લેવો જોઇએ.",
   "mn1:50.2": "એ શેના માટે?",
   "mn1:50.3": "એમને સંપૂર્ણ઼પણે સમજ઼ાય એના માટે, કહું છું.",
-  "mn1:50.4": " અરહંત "
+  "mn1:50.4": " અરહંત ",
+  "mn1:51.1": "ભિક્ષુઓ, જે ભિક્ષુ અશુધ્ધિઓના અંત દ, "
 }
